--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>
     <main class="container">
       <!-- Header -->
-      <header id="#home">
+      <header>
         <nav>
           <h1 class="logo">Edie</h1>
           <span id="toggle--menu" class="material-icons toggle--menu"></span>
@@ -47,7 +47,7 @@
         </nav>
       </header>
 
-      <div class="hero--section">
+      <div id="#home" class="hero--section">
         <div class="hero--section__text">
           <h4>Unhappy with your website?</h4>
           <h1>We create beautiful and fast web services</h1>
